--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -43,13 +43,16 @@
             Car types
         </p>
         <ul>
-            <li>Car types</li>
+            <li>SUV</li>
         </ul>
      </div>
      <div class="three">
         <p>Sustainability</p>
         <ul>
-            <li>Sustaiability</li>
+            <li>Increased Air Quality</li>
+            <li>
+                Less maintenance costs
+            </li>
         </ul>
      </div>
      </div>
