--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </nav>
     </header>
     <h1>
-        Title
+         Electric vehicles for Environmental sustainability
     </h1>
     <h2>
-        Rhetorical Q?
+        How beneficiary can E-cars as opposed to their counterparts? 
     </h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/-EG6rqA2vvA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <p>
-        Welcome to my website...
+        This website explains the vast benefits associated with E-cars as the transport industry sways to a more sustainable future. 
     </p>
     <div class="factbox"> 
     <div class="one">
