--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
                 <li> <a href="project.html" id="active" target="_blank">Home</a> </li>
                 <li><a href ="Sustainability.html" target="_blank">Sustainability</a> </li>
                 <li> <a href="Categories.html" target="_blank">Categories</a> </li>
-                <li> <a href ="" target="_blank">Contact</a></li>
+                <li> <a href ="contact.html" target="_blank">Contact</a></li>
             </ul>
         </nav>
     </header>
     <h1>
-         Electric vehicles for Environmental sustainability
+        Electric vehicles for Environmental sustainability
     </h1>
     <h2>
-        How beneficiary can E-cars as opposed to their counterparts? 
+        How beneficiary are E-cars as opposed to their counterparts? 
     </h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/-EG6rqA2vvA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <p>
@@ -33,17 +33,19 @@
             Why you should go electric: 
         </p>
         <ul>
-            <li>Reason 1</li>
-            <li>Reason 2</li>
-            <li>R3</li>
+            <li>Lower servicing and maintenance costs</li>
+            <li>Cheaper to refuel than petrol/diesel cars</li>
+            <li>Free parking for electric vehicles in some towns and cities</li>
         </ul>
      </div>
      <div class="two">
         <p>
-            Car types
+            Electric car types
         </p>
         <ul>
-            <li>SUV</li>
+            <li>Battery-electric Vehicle (BEV)</li>
+            <li>Plug-in hybrid electric vehicle (PHEV)</li>
+            <li>Extended range electric vehicle (E-REV)</li>
         </ul>
      </div>
      <div class="three">
@@ -52,6 +54,9 @@
             <li>Increased Air Quality</li>
             <li>
                 Less maintenance costs
+            </li>
+            <li>
+                Lower emissions - attractive for London ULEZ zones.
             </li>
         </ul>
      </div>
